# --------------------------------------------------------------------------------------------------
#  Copyright (C) 2013, Sierra Wireless Inc., all rights reserved.
# --------------------------------------------------------------------------------------------------

add_library(ObjectModel
            Component.cpp
            ComponentInstance.cpp
            Executable.cpp
            App.cpp
            ProcessEnvironment.cpp
            Process.cpp
            Exception.cpp
            FilePath.cpp
            CLanguage.cpp
            BuildParams.cpp
            Interface.cpp
        )
