# --------------------------------------------------------------------------------------------------
#  Copyright (C) 2013-2014, Sierra Wireless Inc.  Use of this work is subject to license.
# --------------------------------------------------------------------------------------------------

add_library(ObjectModel
            Library.cpp
            Api.cpp
            Component.cpp
            ComponentInstance.cpp
            Executable.cpp
            App.cpp
            ProcessEnvironment.cpp
            Process.cpp
            Exception.cpp
            FilePath.cpp
            FileMapping.cpp
            CLanguage.cpp
            BuildParams.cpp
            Interface.cpp
            WatchdogConfig.cpp
        )
