#*******************************************************************************
# Copyright (C) 2013, Sierra Wireless Inc., all rights reserved.
#
# Contributors:
#     Sierra Wireless - initial API and implementation
#*******************************************************************************

### Platform Adaptor
add_subdirectory(platformAdaptor)

### Component Implementation
add_subdirectory(implementation)

